crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_multi_alias_conflict_main.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
include lib.a()::{ x as x_a };
include lib.b()::{ x as x_b };

node combined: Dimensionless = @x_a + @x_b;
