crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_multi_alias_helper.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
assertion_line: 541
expression: formatted
---
param x: Dimensionless = 42.0;
