crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_multi_alias_main.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
include helper.lib()::{ x as imported_x };

node y: Dimensionless = @imported_x + 1.0;
