crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_multi_assertions_checks.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
// checks.gcl -- shared assertions
param limit: Dimensionless = 100.0;
assert limit_positive = @limit > 0.0;
