crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_multi_assertions_main.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
// main.gcl -- instance-local cross-file assumes test
include checks.lib()::{ limit, limit_positive };

param value: Dimensionless = 42.0;

#[assumes(limit_positive)]
node ratio: Dimensionless = @value / @limit;
