crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_multi_auto_assert_lib.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
// lib.gcl -- library with an assertion that is NOT explicitly imported
param limit: Dimensionless = 100.0;
pub node doubled: Dimensionless = @limit * 2.0;
assert limit_positive = @limit > 0.0;
