crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_multi_auto_assert_main.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
// main.gcl -- selective include; does NOT import the assertion explicitly
// The assertion in lib.gcl should still be evaluated and reported.
include lib.lib()::{ doubled };

node result: Dimensionless = @doubled + 1.0;
