crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_multi_auto_assert_module_main.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
// main.gcl -- module include; assertion in lib.gcl auto-evaluated
import lib.lib as lib;

node result: Dimensionless = @lib::doubled + 1.0;
