crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_multi_bad_name_import.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
import "./helper.gcl" { nonexistent };
param y: Dimensionless = 1.0;
