crates/graphcal-fmt/tests/snapshots/format_tests__snapshot_multi_bad_name_import_helper.snap
---
source: crates/graphcal-fmt/tests/format_tests.rs
expression: formatted
---
param x: Dimensionless = 42.0;
